css: Prevent code from spilling.

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -59,6 +59,7 @@ pre {
     padding: 10px;
     text-align: left;
     font-family: fixed-width;
+    overflow-x: auto;
     margin-bottom: 0.8rem;
 }
 
